VSE keyframes don't work #74897

Closed
opened 2020-03-18 20:45:18 +01:00 by pranavjit virdi · 19 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48

Blender Version
Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 11:53, hash: dd416681fb
Worked: 2.82a official release

Short description of error
[Please fill out a short description of the error here]
keyframing and animating opacity in the vse editor doesn't seem to work as it used to. the image above doesn't change its opacity.
below is the latest build
Bug report 01.PNG
below is 2.82a
Bug report 02.PNG

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]

  1. open vse
  2. add two (different) images on top of each other
  3. keyframe the opacity on the image above in some way (fade in or out, doesn't matter)
  4. the image doesn't fade, neither in the preview nor the render.

[Based on the default startup or an attached .blend file (as simple as possible)]
Bug_Report_03.blend1

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.48 **Blender Version** Broken: version: 2.83 (sub 9), branch: master, commit date: 2020-03-18 11:53, hash: `dd416681fb` Worked: 2.82a official release **Short description of error** [Please fill out a short description of the error here] keyframing and animating opacity in the vse editor doesn't seem to work as it used to. the image above doesn't change its opacity. below is the latest build ![Bug report 01.PNG](https://archive.blender.org/developer/F8414429/Bug_report_01.PNG) below is 2.82a ![Bug report 02.PNG](https://archive.blender.org/developer/F8414432/Bug_report_02.PNG) **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] 1. open vse 2. add two (different) images on top of each other 3. keyframe the opacity on the image above in some way (fade in or out, doesn't matter) 4. the image doesn't fade, neither in the preview nor the render. [Based on the default startup or an attached .blend file (as simple as possible)] [Bug_Report_03.blend1](https://archive.blender.org/developer/F8414437/Bug_Report_03.blend1)

#75585 was marked as duplicate of this issue

#75585 was marked as duplicate of this issue

#75501 was marked as duplicate of this issue

#75501 was marked as duplicate of this issue

#75180 was marked as duplicate of this issue

#75180 was marked as duplicate of this issue

#75070 was marked as duplicate of this issue

#75070 was marked as duplicate of this issue

#75039 was marked as duplicate of this issue

#75039 was marked as duplicate of this issue

Added subscriber: @PranavjitVirdi

Added subscriber: @PranavjitVirdi

Closed as duplicate of #73056

Closed as duplicate of #73056

Changed status from 'Duplicate' to: 'Confirmed'

Changed status from 'Duplicate' to: 'Confirmed'
Added subscribers: @tangentstorm, @iss, @tintwotin, @EitanSomething

Added subscribers: @rimpotche, @mano-wii

Added subscribers: @rimpotche, @mano-wii

Added subscriber: @Okenekab

Added subscriber: @Okenekab
Philipp Oeser changed title from VSE opacity keyframes don't work to VSE keyframes don't work 2020-04-08 17:27:30 +02:00
Member

Added subscribers: @NiekKort, @lichtwerk

Added subscribers: @NiekKort, @lichtwerk
Member

Added subscriber: @EAW

Added subscriber: @EAW

Added subscriber: @Eisfuchs

Added subscriber: @Eisfuchs

Added subscriber: @EvertonSchneider

Added subscriber: @EvertonSchneider

I can confirm it. I was about to report the same bug but found this report here. Thanks for reporting. Actually not only opacity... almost everything that I tested didn't update during the playback but seems to render ok with CTRL + F12. The result rendered file is fine with all animations.

I can confirm it. I was about to report the same bug but found this report here. Thanks for reporting. Actually not only opacity... almost everything that I tested didn't update during the playback but seems to render ok with CTRL + F12. The result rendered file is fine with all animations.

Added subscriber: @bcgriffin

Added subscriber: @bcgriffin

This issue was referenced by 77ca5ab6b0

This issue was referenced by 77ca5ab6b02bbccc97d13c50d4174afe9471725a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2020-04-12 22:19:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74897
No description provided.